# jetson_zed_setup

./: package.xml  setup.cfg  setup.py
jetson_zed_setup/: first_run.txt  run_pf.py  run_without_pf.py  script.py
